# C-rypt

./: CMakeLists.txt  LICENSE  README.md
include/: change.h  config.h  read.h
src/: change.c  main.c  read.c
test/get_rgba/: main  main.c
